--- a/estilo.css
+++ b/estilo.css
@@ -4,18 +4,21 @@
 }
 .primero{
     background-color: rgb(48, 47, 47);
-    height: 100px;
-    font-size: 1.5rem;
+    min-height: 100px;
+}
+.colorgris{
+    background-color: rgb(48, 47, 47);
 }
 .primeraparte{
-    width: 37%;
-    padding: 20px;
+    width: 300px;
 }
 .codoacodo{
-    width: 25%;
+    width: 150px;
 }
 .confbsas{
+    width: 100%;
     color: white;
+    font-size: 1.5em;
 }
 .primero-labels{
     background-color: rgb(48, 47, 47);
@@ -52,7 +55,7 @@
 .descripcionfoto{
     top: 40%;
     right: 10%;
-    width: 30%;
+    width: 500px;
     position: absolute;
     text-align: right;
     color: white;
@@ -67,16 +70,17 @@
 h3{
     text-align: center;
 }
-.fotoplaya{
-    width: 102%;
-}
-.honolulu{
-    width: 100%;
-}
 .playadescriptiva{
     width: 100%;
     height: 100%;
     margin-top: 40px;
+}
+.fotoplaya{
+    width: 100%;
+}
+.honolulu{
+    width: 100%;
+    height: 100%;
 }
 .descripciondelaplaya{
     width: 100%;
@@ -90,18 +94,32 @@ h4{
     color: white;
 }
 #nombre{
+    border-style: none;
+    border: solid 1px grey;
+    border-radius: 5px;
     width: 50%;
+    height: 40px;
     margin: 0px 20px 0px 0px;
+    padding-left: 10px;
 }
 #apellido{
+    border-style: none;
+    border: solid 1px grey;
+    border-radius:  5px;
     width: 50%;
+    height: 40px;
     margin: 0px 0px 0px 20px;
+    padding-left: 10px;
 }
 #hablar{
     width: 100%;
     height: 100px;
+    border-style: none;
+    border: solid 1px grey;
+    border-radius: 5px;
     margin: 15px 0px 0px 0px;
-    padding: 15px 0px 0px 10px;
+    padding: 15px 0px 0px 25px;
+    font-size: 1.5em;
 }
 .parrafoconviertete{
     text-align: center;
